@@ -1,5 +1,6 @@
 === ongoing (0.2.X - to be released as 0.3) ===
 
+- Added letsfreckle invoices to dashboard
 - Improved and enhanced transaction form
 - Added account statistics
 - Added CU views for transactions and invoices
